--- a/agents/node/Dockerfile
+++ b/agents/node/Dockerfile
@@ -37,7 +37,15 @@ RUN apt-get update && apt-get install -y \
     zlib1g-dev \
     libpng12-dev
 
-# nodejs 
+# replace shell with bash so we can source files
+RUN rm /bin/sh && ln -s /bin/bash /bin/sh
+
+# update the repository sources list
+# and install dependencies
+RUN apt-get update \
+    && apt-get install -y curl \
+    && apt-get -y autoclean
+
 # nvm environment variables
 ENV NVM_DIR /usr/local/nvm
 ENV NODE_VERSION 6.9.2
@@ -55,6 +63,11 @@ RUN source $NVM_DIR/nvm.sh \
 # add node and npm to path so the commands are available
 ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
 ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
+
+# confirm installation
+RUN node -v
+RUN npm -v
+
 
 # confirm installation
 RUN node -v
